--- a/template.html
+++ b/template.html
@@ -22,6 +22,9 @@
   <body>
 
     <div class="container-fluid">
+
+      <p>Hello, world!</p>
+
     </div>
 
   </body>
@@ -30,8 +33,14 @@
 
      <div class="container-fluid">
 
-       
-
+	     <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative
+		     Commons License" style="border-width:0"
+		     src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span
+		     xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Old Mountain</span> by <a
+	     xmlns:cc="http://creativecommons.org/ns#" href="http://shaysolette.github.io/Old-Mountain"
+	     property="cc:attributionName" rel="cc:attributionURL">Shay Solette</a> is licensed under a <a
+	     rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
+	     Attribution-ShareAlike 4.0 International License</a>.</p>   
      </div>
    
   </footer>
