--- a/template.html
+++ b/template.html
@@ -1,5 +1,13 @@
 <DOCTYPE! html>
 
+<!--Old Mountain (c) by Shay Solette-->
+
+<!--Old Mountain is licensed under a-->
+<!--Creative Commons Attribution-ShareAlike 3.0 Unported License.-->
+
+<!--You should have received a copy of the license along with this-->
+<!--work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
+
 <html>
 
   <head>
@@ -16,13 +24,16 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="novel, nanowrimo, low-fantasy, fiction">
+    <meta name="description" content="A low-fantasy novel by Shay Solette, written for NaNoWriMo 2014">
+    <meta name="author" content="Shay Solette">
 
   </head>
 
   <body>
 
     <div class="container-fluid">
-
+      <h1>Old Mountain</h1><hr>
+      <p>A novel by Shay Solette</p>
       <p>Hello, world!</p>
 
     </div>
