moves horizontal rule down one line

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
   <body>
 
     <div class="container-fluid">
-      <h1>Old Mountain</h1><hr>
-      <p>A novel by Shay Solette</p>
+      <h1>Old Mountain</h1>
+      <p>A novel by Shay Solette</p><hr>
       <p>Hello, world!</p>
 
     </div>
