--- a/template.html
+++ b/template.html
@@ -32,8 +32,8 @@
   <body>
 
     <div class="container-fluid">
-      <h1>Old Mountain</h1><hr>
-      <p>A novel by Shay Solette</p>
+      <h1>Old Mountain</h1>
+      <p>A novel by Shay Solette</p><hr>
       <p>Hello, world!</p>
 
     </div>
