adds navigation and top pages

--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <head>
 
     <title>Old Mountain</title>
+   
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet"href="nav.css">
 
     <!-- Optional: Include the jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -31,12 +33,73 @@
 
   <body>
 
-    <div class="container-fluid">
-      <h1>Old Mountain</h1>
-      <p>A novel by Shay Solette</p><hr>
-      <p>Hello, world!</p>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+	  <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Old Mountain <small>A novel by Shay Solette</small></a>
+          </div>
+	  <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+		    <li class="active"><a href="index.html">Home</a>
+		    <li><a href="contents.html">Table of Contents</a></li>
+		    <li><a href="about.html">About The Author</a></li>
+		    <li><a href="contact.html">Contact</a></li>
+		  </ul>
+		</div>
+              </div>
+	    </div>
 
-    </div>
+	    <div class="container">
+
+	      <div class="text-center">
+	        <h1>Old Mountain</h1>
+		<p class="lead">A novel by Shay Sollete<br>Writen for National Novel Writing Month, 2014</p>
+	      </div>
+
+	      <div class="container">
+
+	        <!--insert book test here-->
+
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu consequat metus. Phasellus eu
+		volutpat lacus, non maximus metus. Cras posuere eros quis maximus accumsan. Vivamus facilisis
+		libero vel est tristique feugiat. Nulla maximus ac leo interdum consectetur. Quisque tincidunt
+		leo non risus dictum sollicitudin. Proin eget nulla tincidunt, elementum nisl ac, consectetur
+		diam. Praesent orci tellus, finibus a rutrum id, maximus eu nibh. Nam aliquet dapibus felis,
+		at suscipit purus dictum non.
+
+		Duis nulla sapien, tincidunt ut leo quis, varius convallis mi. Mauris maximus, nisi in
+		venenatis auctor, leo diam laoreet purus, at finibus sapien eros elementum nibh. Donec non
+		risus felis. In hac habitasse platea dictumst. Aliquam auctor enim et ligula aliquam pharetra.
+		Sed vel laoreet velit. Nulla blandit eu mi ac euismod. Vestibulum posuere dui nec urna
+		pulvinar aliquet. Suspendisse potenti. Quisque ullamcorper libero at arcu suscipit, non
+		fermentum orci suscipit. Aenean dictum dui ut velit suscipit fringilla.
+
+		Aliquam convallis arcu in ante luctus, vitae fermentum urna ultrices. Etiam aliquam dolor in
+		augue lacinia suscipit. Aliquam semper viverra mi, non consequat felis porta a. Nulla iaculis
+		blandit nisi, sed viverra tortor faucibus et. Quisque at leo felis. Phasellus viverra quam at
+		massa luctus, quis sagittis nisl vestibulum. Curabitur urna neque, convallis a tincidunt eu,
+		pulvinar nec justo. Morbi velit tellus, sodales ac erat at, pretium suscipit elit. Curabitur
+		iaculis venenatis magna at cursus. Mauris laoreet rutrum velit, sit amet gravida lectus
+		finibus ut. Vivamus sed iaculis odio, at interdum nisi. Donec in dui mi. Nullam ut euismod
+		mauris.
+
+		Nulla facilisi. Mauris cursus semper laoreet. Aliquam sit amet nulla sapien. Nunc commodo
+		finibus justo at lacinia. Etiam ex leo, blandit at metus sed, finibus volutpat ex. Donec
+		consectetur velit a malesuada sagittis. Nulla et eros libero. Nunc malesuada id massa
+		ultricies suscipit. Praesent et fermentum risus. Curabitur imperdiet magna a posuere lobortis.
+
+		Praesent luctus vel libero id posuere. Nulla vehicula neque non neque aliquet vehicula.
+		Integer ullamcorper urna nec sapien gravida posuere. Pellentesque et accumsan felis. Sed eu
+		posuere diam, eu gravida diam. Sed ultricies lacus quis augue molestie ullamcorper. Curabitur
+		lobortis non metus sed imperdiet. Vivamus tincidunt tortor urna, ac ultrices magna egestas
+		eleifend. Mauris laoreet fermentum nisi id porttitor.
+
+	      </div>
 
   </body>
 
