--- a/template.html
+++ b/template.html
@@ -13,8 +13,10 @@
   <head>
 
     <title>Old Mountain</title>
+   
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+    <link rel="stylesheet"href="nav.css">
 
     <!-- Optional: Include the jQuery library -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
@@ -31,12 +33,39 @@
 
   <body>
 
-    <div class="container-fluid">
-      <h1>Old Mountain</h1>
-      <p>A novel by Shay Solette</p><hr>
-      <p>Hello, world!</p>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+	  <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	      <span class="icon-bar"></span>
+	    </button>
+	    <a class="navbar-brand" href="#">Old Mountain <small>A novel by Shay Solette</small></a>
+          </div>
+	  <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav">
+		    <li class="active"><a href="index.html">Home</a>
+		    <li><a href="contents.html">Table of Contents</a></li>
+		    <li><a href="about.html">About The Author</a></li>
+		    <li><a href="contact.html">Contact</a></li>
+		  </ul>
+		</div>
+              </div>
+	    </div>
 
-    </div>
+	    <div class="container">
+
+	      <div class="text-center">
+	        <h1>Chapter #</h1>
+		<p class="lead">sub-heading1<br>sub-heading2</p>
+	      </div>
+
+	      <div class="container">
+
+	        <!--insert book test here-->
+
+	      </div>
 
   </body>
 
