fixes improperly closed nav tag

--- a/about.html
+++ b/about.html
@@ -45,9 +45,9 @@
           </div>
 	  <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-		    <li class="active"><a href="index.html">Home</a>
+		    <li><a href="index.html">Home</a>
 		    <li><a href="contents.html">Table of Contents</a></li>
-		    <li><a href="about.html">About The Author</a></li>
+		    <li class="active"><a href="about.html">About The Author</a></li>
 		    <li><a href="contact.html">Contact</a></li>
 		  </ul>
 		</div>
@@ -57,13 +57,34 @@
 	    <div class="container">
 
 	      <div class="text-center">
-	        <h1>Chapter #</h1>
-		<p class="lead">sub-heading1<br>sub-heading2</p>
+	        <h1>About the Author</h1>
+		<p class="lead">Shay Solette, musician, game designer,<br>and first time novel writer</p>
 	      </div>
 
 	      <div class="container">
 
 	        <!--insert book test here-->
+
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec tellus efficitur, volutpat
+		lorem et, blandit dolor. Suspendisse congue metus eget mattis dictum. Vivamus hendrerit id
+		erat ac feugiat. Aenean vel nulla enim. Integer facilisis eros sit amet metus interdum, quis
+		pellentesque nibh porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel
+		vulputate dui. Proin laoreet ullamcorper porttitor.
+
+		Maecenas molestie vestibulum neque, a maximus nunc efficitur vel. Suspendisse ut pellentesque
+		ante. Nulla vestibulum erat quis neque imperdiet, et faucibus erat auctor. Ut sodales volutpat
+		libero nec congue. Mauris eget consectetur nibh, a congue odio. Cras accumsan porttitor
+		sagittis. Sed rutrum, orci id fringilla aliquam, quam magna sagittis nisi, ac dictum elit
+		mauris sit amet nulla.
+
+		Quisque at accumsan quam. Nullam ultricies sit amet odio ac consectetur. Etiam consectetur
+		enim eget est fermentum, et posuere neque malesuada. Donec nec justo quis erat viverra
+		iaculis. Pellentesque ullamcorper sapien in sapien placerat, eu dapibus nibh mattis. Morbi sem
+		enim, fringilla suscipit lacus eget, volutpat lacinia nibh. Duis eu consectetur felis. Nulla
+		vitae elit ut tortor dictum hendrerit. Fusce eget ipsum vitae massa ullamcorper faucibus.
+		Morbi fermentum efficitur tellus, sit amet fermentum sapien. Aliquam erat volutpat.
+		Suspendisse libero justo, cursus blandit orci quis, placerat auctor tellus. Pellentesque
+		blandit vel dolor id aliquet.
 
 	      </div>
 
