--- a/contents.html
+++ b/contents.html
@@ -45,8 +45,8 @@
           </div>
 	  <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-		    <li class="active"><a href="index.html">Home</a>
-		    <li><a href="contents.html">Table of Contents</a></li>
+		    <li><a href="index.html">Home</a>
+		    <li class="active"><a href="contents.html">Table of Contents</a></li>
 		    <li><a href="about.html">About The Author</a></li>
 		    <li><a href="contact.html">Contact</a></li>
 		  </ul>
@@ -57,13 +57,31 @@
 	    <div class="container">
 
 	      <div class="text-center">
-	        <h1>Chapter #</h1>
-		<p class="lead">sub-heading1<br>sub-heading2</p>
+	        <h1>Table of Contents</h1>
+		<p class="lead">Old Mountain<br>by Shay Solette</p>
 	      </div>
 
 	      <div class="container">
 
 	        <!--insert book test here-->
+
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+		Ut pharetra massa quis mattis ornare.
+		Integer ac ligula quis neque feugiat condimentum sit amet nec quam.
+		Phasellus venenatis diam eget enim ornare venenatis.
+		Sed a mauris et nisl mollis blandit non at nunc.
+		Phasellus vehicula arcu a mauris fermentum viverra sit amet eu enim.
+		Ut tincidunt nisi id ante efficitur porttitor.
+		Aliquam eu metus vitae nisi pharetra vulputate nec et mi.
+		Ut ac risus nec mauris pellentesque vulputate.
+		Nulla id libero in orci ornare luctus.
+		Morbi efficitur nunc nec ornare consectetur.
+		Phasellus mattis ligula ac lobortis mollis.
+		Nullam a est at dui iaculis elementum.
+		Vivamus sed arcu venenatis, volutpat lorem eget, sagittis elit.
+		Proin dictum mi nec libero ultrices sagittis.
+		Duis a odio eget magna fringilla lobortis.
+		Praesent laoreet quam eu mauris maximus imperdiet.
 
 	      </div>
 
