updates to readme.me and index.html

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <DOCTYPE! html>
 
-<!--Old Mountain (c) by Shay Solette-->
+<!--Old Mountain (c) by Shay Solette
 
-<!--Old Mountain is licensed under a-->
-<!--Creative Commons Attribution-ShareAlike 3.0 Unported License.-->
+Old Mountain is licensed under a
+Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
-<!--You should have received a copy of the license along with this-->
-<!--work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
+You should have received a copy of the license along with this
+work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 
 <html>
 
@@ -63,41 +63,7 @@
 
 	      <div class="container">
 
-	        <!--insert book test here-->
-
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eu consequat metus. Phasellus eu
-		volutpat lacus, non maximus metus. Cras posuere eros quis maximus accumsan. Vivamus facilisis
-		libero vel est tristique feugiat. Nulla maximus ac leo interdum consectetur. Quisque tincidunt
-		leo non risus dictum sollicitudin. Proin eget nulla tincidunt, elementum nisl ac, consectetur
-		diam. Praesent orci tellus, finibus a rutrum id, maximus eu nibh. Nam aliquet dapibus felis,
-		at suscipit purus dictum non.
-
-		Duis nulla sapien, tincidunt ut leo quis, varius convallis mi. Mauris maximus, nisi in
-		venenatis auctor, leo diam laoreet purus, at finibus sapien eros elementum nibh. Donec non
-		risus felis. In hac habitasse platea dictumst. Aliquam auctor enim et ligula aliquam pharetra.
-		Sed vel laoreet velit. Nulla blandit eu mi ac euismod. Vestibulum posuere dui nec urna
-		pulvinar aliquet. Suspendisse potenti. Quisque ullamcorper libero at arcu suscipit, non
-		fermentum orci suscipit. Aenean dictum dui ut velit suscipit fringilla.
-
-		Aliquam convallis arcu in ante luctus, vitae fermentum urna ultrices. Etiam aliquam dolor in
-		augue lacinia suscipit. Aliquam semper viverra mi, non consequat felis porta a. Nulla iaculis
-		blandit nisi, sed viverra tortor faucibus et. Quisque at leo felis. Phasellus viverra quam at
-		massa luctus, quis sagittis nisl vestibulum. Curabitur urna neque, convallis a tincidunt eu,
-		pulvinar nec justo. Morbi velit tellus, sodales ac erat at, pretium suscipit elit. Curabitur
-		iaculis venenatis magna at cursus. Mauris laoreet rutrum velit, sit amet gravida lectus
-		finibus ut. Vivamus sed iaculis odio, at interdum nisi. Donec in dui mi. Nullam ut euismod
-		mauris.
-
-		Nulla facilisi. Mauris cursus semper laoreet. Aliquam sit amet nulla sapien. Nunc commodo
-		finibus justo at lacinia. Etiam ex leo, blandit at metus sed, finibus volutpat ex. Donec
-		consectetur velit a malesuada sagittis. Nulla et eros libero. Nunc malesuada id massa
-		ultricies suscipit. Praesent et fermentum risus. Curabitur imperdiet magna a posuere lobortis.
-
-		Praesent luctus vel libero id posuere. Nulla vehicula neque non neque aliquet vehicula.
-		Integer ullamcorper urna nec sapien gravida posuere. Pellentesque et accumsan felis. Sed eu
-		posuere diam, eu gravida diam. Sed ultricies lacus quis augue molestie ullamcorper. Curabitur
-		lobortis non metus sed imperdiet. Vivamus tincidunt tortor urna, ac ultrices magna egestas
-		eleifend. Mauris laoreet fermentum nisi id porttitor.
+	        <!--insert book text here-->
 
 	      </div>
 
