--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@ while struggling to cope with a reluctant new partner, who he is not sure if he 
 food on his plate for one more day.  Failure will mean death.</p>
 
 <p>Follow my progress as I write this novel, which will be available on GitHub. If you have any questions or
-suggestions, visit my contact page, and write me an email, or leave me a comment on twitter. If you like what
-you see here, and would like to use any of this material for a novel, website, game, or any creative work of
-your own, you may freely do so under the terms of the license found at the bottom of this page.</p>
+suggestions, visit my <a href="contact.html">contact page</a>, and write me an email, or leave me a comment on
+twitter. If you like what you see here, and would like to use any of this material for a novel, website, game, or
+any creative work of your own, you may freely do so under the terms of the license found at the bottom of this page.</p>
 
 	      </div>
 
