adds about me text

--- a/about.html
+++ b/about.html
@@ -1,14 +1,14 @@
 <DOCTYPE! html>
 
-<!--Old Mountain (c) by Shay Solette-->
+<!--Old Mountain (c) by Shay Solette
 
-<!--Old Mountain is licensed under a-->
-<!--Creative Commons Attribution-ShareAlike 3.0 Unported License.-->
+Old Mountain is licensed under a
+Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
-<!--You should have received a copy of the license along with this-->
-<!--work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
+You should have received a copy of the license along with this
+work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 
-<html>
+<html lang="en-us" >
 
   <head>
 
@@ -65,28 +65,32 @@
 
 	        <!--insert book test here-->
 
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec tellus efficitur, volutpat
-		lorem et, blandit dolor. Suspendisse congue metus eget mattis dictum. Vivamus hendrerit id
-		erat ac feugiat. Aenean vel nulla enim. Integer facilisis eros sit amet metus interdum, quis
-		pellentesque nibh porttitor. Lorem ipsum dolor sit amet, consectetur adipiscing elit. In vel
-		vulputate dui. Proin laoreet ullamcorper porttitor.
+		<div class="row">
+			
+			<div class="col-sm-6"><img src="img/shay_jpg" alt="Shay Solette"></div>
+			
+			<div class="col-sm-6">
 
-		Maecenas molestie vestibulum neque, a maximus nunc efficitur vel. Suspendisse ut pellentesque
-		ante. Nulla vestibulum erat quis neque imperdiet, et faucibus erat auctor. Ut sodales volutpat
-		libero nec congue. Mauris eget consectetur nibh, a congue odio. Cras accumsan porttitor
-		sagittis. Sed rutrum, orci id fringilla aliquam, quam magna sagittis nisi, ac dictum elit
-		mauris sit amet nulla.
+			
+<p>I decided to write this novel after having a challenge issued to me by one of my close friends, a trained
+writer with an English degree, who first told me about National Novel Writing Month last year. Prior to
+beginning this novel, the only previous writing I have done has been song lyrics, poetry, and writing for
+tabletop and PC games that I enjoy designing; things like plot, level design, and NPC dialog, although I feel
+like still suck at dialog.</p>
 
-		Quisque at accumsan quam. Nullam ultricies sit amet odio ac consectetur. Etiam consectetur
-		enim eget est fermentum, et posuere neque malesuada. Donec nec justo quis erat viverra
-		iaculis. Pellentesque ullamcorper sapien in sapien placerat, eu dapibus nibh mattis. Morbi sem
-		enim, fringilla suscipit lacus eget, volutpat lacinia nibh. Duis eu consectetur felis. Nulla
-		vitae elit ut tortor dictum hendrerit. Fusce eget ipsum vitae massa ullamcorper faucibus.
-		Morbi fermentum efficitur tellus, sit amet fermentum sapien. Aliquam erat volutpat.
-		Suspendisse libero justo, cursus blandit orci quis, placerat auctor tellus. Pellentesque
-		blandit vel dolor id aliquet.
+<p>When I am not writing, I am either playing music, or designing and programing games.  I have been playing
+guitar for over 15 years, and I dabble in several other instruments.  I write my own music, and have recorded
+and performed with several rock bands. I have a passion for many styles of music, as diverse as metal, blues,
+jazz, new wave, funk, blue grass, and many others. Metal however, always holds a special place in my heart as
+the spark that ignited my passion for making music</p>
 
-	      </div>
+<p>I have been involved in game design in one form or another for about 10 years. I started designing modules for
+tabletop roleplaying games, beginning with Advanced Dungeons &amp Dragons, 2nd Edition. As my programing skills
+increase, I have begun working on PC games. I still run a weekly Pathfinder group in my home town of Ephrata,
+Pennsylvania.</p>
+
+			</div>
+	              </div>
 
   </body>
 
