--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ Creative Commons Attribution-ShareAlike 3.0 Unported License.
 You should have received a copy of the license along with this
 work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 
-<html>
+<html lang="en-us">
 
   <head>
 
@@ -65,7 +65,7 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 
 	        <!--insert book text here-->
 
-<p>Old Mountain is a novel being written by Shay Solette for National Novel Writing Month.  It will be his first
+<p>I am writing Old Mountain for National Novel Writing Month in November of 2014. This will be my first
 novel. This novel will be written in one month, starting on 1 November 2014, and ending on 30 November 2014.
 Old Mountain is set in a gritty, low fantasy world, and is inspired by old western movies. The protagonist is
 a lone bounty hunter who must join forces with a rival in order to track down and apprehend the most wanted
