attempts to fix broken image path

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 
 		<div class="row">
 			
-			<div class="col-sm-6"><img src="img/shay_jpg" alt="Shay Solette"></div>
+			<div class="col-sm-6"><img src="./img/shay_jpg" alt="Shay Solette"></div>
 			
 			<div class="col-sm-6">
 
