tries to fix image bleed problem

--- a/about.html
+++ b/about.html
@@ -61,7 +61,7 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 		<p class="lead">Shay Solette, musician, game designer,<br>and first time novel writer</p>
 	      </div>
 
-	      <div class="container">
+	      <div class="container-fluid">
 
 	        <!--insert book test here-->
 
