second attempt to fix image bleed

--- a/about.html
+++ b/about.html
@@ -1,5 +1,4 @@
 <DOCTYPE! html>
-
 <!--Old Mountain (c) by Shay Solette
 
 Old Mountain is licensed under a
@@ -7,11 +6,8 @@ Creative Commons Attribution-ShareAlike 3.0 Unported License.
 
 You should have received a copy of the license along with this
 work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
-
 <html lang="en-us" >
-
   <head>
-
     <title>Old Mountain</title>
    
     <!-- Latest compiled and minified CSS -->
@@ -28,11 +24,8 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
     <meta name="keywords" content="novel, nanowrimo, low-fantasy, fiction">
     <meta name="description" content="A low-fantasy novel by Shay Solette, written for NaNoWriMo 2014">
     <meta name="author" content="Shay Solette">
-
   </head>
-
   <body>
-
       <nav class="navbar navbar-inverse navbar-fixed-top">
         <div class="container-fluid">
 	  <div class="navbar-header">
@@ -53,54 +46,36 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 		</div>
               </div>
 	    </nav>
-
 	    <div class="container">
-
 	      <div class="text-center">
 	        <h1>About the Author</h1>
 		<p class="lead">Shay Solette, musician, game designer,<br>and first time novel writer</p>
 	      </div>
-
 	      <div class="container-fluid">
-
-	        <!--insert book test here-->
-
 		<div class="row">
-			
-			<div class="col-sm-6"><img src="img/shay_jpg.jpg" alt="Shay Solette"></div>
-			
-			<div class="col-sm-6">
-
-			
+		  <div class="col-sm-6"><img src="img/shay_jpg.jpg" alt="Shay Solette"></div>			
+		  <div class="col-sm-6">	
 <p>I decided to write this novel after having a challenge issued to me by one of my close friends, a trained
 writer with an English degree, who first told me about National Novel Writing Month last year. Prior to
 beginning this novel, the only previous writing I have done has been song lyrics, poetry, and writing for
 tabletop and PC games that I enjoy designing; things like plot, level design, and NPC dialog, although I feel
 like still suck at dialog.</p>
-
 <p>When I am not writing, I am either playing music, or designing and programing games.  I have been playing
 guitar for over 15 years, and I dabble in several other instruments.  I write my own music, and have recorded
 and performed with several rock bands. I have a passion for many styles of music, as diverse as metal, blues,
 jazz, new wave, funk, blue grass, and many others. Metal however, always holds a special place in my heart as
 the spark that ignited my passion for making music</p>
-
 <p>I have been involved in game design in one form or another for about 10 years. I started designing modules for
 tabletop roleplaying games, beginning with Advanced Dungeons &amp Dragons, 2nd Edition. As my programing skills
 increase, I have begun working on PC games. I still run a weekly Pathfinder group in my home town of Ephrata,
 Pennsylvania.</p>
-
-			</div>
-	              </div>
-
+		   </div>
+	         </div>
+	       </div>
   </body>
-
   <footer>
-
      <div class="container-fluid">
-
-	     <hr>
-
-	     <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative
+	     <hr><p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative
 		     Commons License" style="border-width:0"
 		     src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br /><span
 		     xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Old Mountain</span> by <a
@@ -109,7 +84,5 @@ Pennsylvania.</p>
 	     rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons
 	     Attribution-ShareAlike 4.0 International License</a>.</p>   
      </div>
-   
-  </footer>
-
+   </footer>
 </html>
