adds img-responsive class to portrait

--- a/about.html
+++ b/about.html
@@ -53,7 +53,9 @@ work.  If not, see <http://creativecommons.org/licenses/by-sa/3.0/>.-->
 	      </div>
 	      <div class="container-fluid">
 		<div class="row">
-		  <div class="col-sm-6"><img src="img/shay_jpg.jpg" alt="Shay Solette"></div>			
+		  <div class="col-sm-6">
+		    <img class="img-responsive" src="img/shay_jpg.jpg" alt="Shay Solette">
+	          </div>			
 		  <div class="col-sm-6">	
 <p>I decided to write this novel after having a challenge issued to me by one of my close friends, a trained
 writer with an English degree, who first told me about National Novel Writing Month last year. Prior to
