adds content to contact page

--- a/contact.html
+++ b/contact.html
@@ -63,25 +63,20 @@
 
 	      <div class="container">
 
-	        <!--insert book test here-->
-
-		Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-		Ut pharetra massa quis mattis ornare.
-		Integer ac ligula quis neque feugiat condimentum sit amet nec quam.
-		Phasellus venenatis diam eget enim ornare venenatis.
-		Sed a mauris et nisl mollis blandit non at nunc.
-		Phasellus vehicula arcu a mauris fermentum viverra sit amet eu enim.
-		Ut tincidunt nisi id ante efficitur porttitor.
-		Aliquam eu metus vitae nisi pharetra vulputate nec et mi.
-		Ut ac risus nec mauris pellentesque vulputate.
-		Nulla id libero in orci ornare luctus.
-		Morbi efficitur nunc nec ornare consectetur.
-		Phasellus mattis ligula ac lobortis mollis.
-		Nullam a est at dui iaculis elementum.
-		Vivamus sed arcu venenatis, volutpat lorem eget, sagittis elit.
-		Proin dictum mi nec libero ultrices sagittis.
-		Duis a odio eget magna fringilla lobortis.
-		Praesent laoreet quam eu mauris maximus imperdiet.
+	         <h2>Follow Me On Twitter</h2>
+		 <p>By far, the best way to keep in touch with me is on Twitter. Look for me under the Twitter
+		    handle<a href="http://twitter.com/ShaySolette">@ShaySolette</a></p>
+		  <h2>Google+</h2>
+		  <p><a href="https://plus.google.com/u/0/117422561154165846637/posts/p/pub">My Google+  page</a>
+		  is the next best way to keep in touch with me after twitter.</p>
+		  <h2>Facebook</h2>
+		  <p><a href="https://www.facebook.com/shay.solette">My Facebook page</a>is my least favorite way
+		  to communicate.  I hate Facebook. But if this is your perfered way to contact me, here is my
+		  page</p>
+		  <h2>email</h2>
+		  <p>My personal email adress is <a href="mailto:shay.solette@gmail.com">shay.solette@gmail.com</a>
+		  I try to respond to all emails in a resonable amount of time, but I'm not making any 
+		  promisses.</p>
 
 	      </div>
 
